example/scopes/blocks.lox
var pi = 3.14159265;

{
    var height = 15;
    {
        var length = pi * 2;
    }

    // error: length scope ended
    var area = height * length;
}